Update 'rhdh-rc-17-dotnet-github-tekton-quay-060825' component image to: quay.io/jsmid/rhtap-qe-jsmid:e8ba7f2cce2d55a855ec710b29435219cac129b3@sha256:50a91150bfabe64dad6b1865cf16704e0fac7a27b77b0b4e9195799cb0efdb95

--- a/components/rhdh-rc-17-dotnet-github-tekton-quay-060825/overlays/development/deployment-patch.yaml
+++ b/components/rhdh-rc-17-dotnet-github-tekton-quay-060825/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rhdh-rc-17-dotnet-github-tekton-quay-060825
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe-jsmid:e8ba7f2cce2d55a855ec710b29435219cac129b3@sha256:50a91150bfabe64dad6b1865cf16704e0fac7a27b77b0b4e9195799cb0efdb95
+          name: container-image
